--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.6.0
   flutter_svg: ^2.2.0
+  firebase_core: ^3.14.0
   cloud_firestore: ^5.6.9
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
