--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^3.14.0
   cloud_firestore: ^5.6.9
   local_auth: ^2.3.0
+  font_awesome_flutter: ^10.8.0
+  firebase_database: ^11.3.7
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +70,8 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/
+    - assets/icons/
+    - assets/icons/unfocused48.svg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
