--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   local_auth: ^2.3.0
   font_awesome_flutter: ^10.8.0
   firebase_database: ^11.3.7
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
