--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="Pinlit"
+        android:label="Mobitalk"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
