--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_database: ^11.3.7
   intl: ^0.20.2
   google_fonts: ^6.2.1
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
